add update vm arguments